<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.machanism.machai</groupId>
		<artifactId>machai</artifactId>
		<version>0.0.11-SNAPSHOT</version>
	</parent>

	<artifactId>ghostwriter</artifactId>
	<name>Ghostwriter</name>

	<properties>
		<maven.compiler.release>8</maven.compiler.release>
		<maven.javadoc.skip>false</maven.javadoc.skip>
	</properties>

	<profiles>
		<profile>
			<id>pack</id>

			<dependencies>
				<dependency>
					<groupId>org.apache.maven</groupId>
					<artifactId>maven-model</artifactId>
					<version>${maven.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.maven</groupId>
					<artifactId>maven-plugin-api</artifactId>
					<version>${maven.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.maven</groupId>
					<artifactId>maven-core</artifactId>
					<version>${maven.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.maven.resolver</groupId>
					<artifactId>maven-resolver-connector-basic</artifactId>
					<version>1.3.3</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.maven.resolver</groupId>
					<artifactId>maven-resolver-transport-file</artifactId>
					<version>1.3.3</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.maven.resolver</groupId>
					<artifactId>maven-resolver-transport-http</artifactId>
					<version>1.3.3</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.maven.resolver</groupId>
					<artifactId>maven-resolver-transport-wagon</artifactId>
					<version>1.3.3</version>
					<scope>compile</scope>
				</dependency>
			</dependencies>

			<build>
				<plugins>
					<plugin>
						<artifactId>maven-assembly-plugin</artifactId>
						<configuration>
							<finalName>gw</finalName>
							<archive>
								<manifest>
									<mainClass>
										org.machanism.machai.gw.processor.Ghostwriter</mainClass>
								</manifest>
								<manifestEntries>
									<Class-Path><![CDATA[lib/ae.jar lib/web-ae-plugin.jar]]></Class-Path>
								</manifestEntries>
							</archive>
						</configuration>
						<executions>
							<execution>
								<id>build-artifact</id>
								<phase>install</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<appendAssemblyId>false</appendAssemblyId>
									<outputDirectory>${project.build.directory}</outputDirectory>
									<archive>
										<manifestEntries>
											<Class-Path>${plugins-class-path}</Class-Path>
										</manifestEntries>
									</archive>
									<descriptorRefs>
										<descriptorRef>jar-with-dependencies</descriptorRef>
									</descriptorRefs>
								</configuration>
							</execution>
							<execution>
								<id>delivery-pack</id>
								<phase>install</phase>
								<goals>
									<goal>single</goal>
								</goals>
								<configuration>
									<appendAssemblyId>false</appendAssemblyId>
									<descriptors>
										<descriptor>src/assembly/assembly.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<description>
		Ghostwriter is an advanced documentation engine that automatically
		scans, analyzes, and assembles project documentation using embedded
		guidance tags and AI-powered synthesis.
	</description>

	<dependencies>
		<dependency>
			<groupId>org.machanism.machai</groupId>
			<artifactId>project-layout</artifactId>
			<version>0.0.11-SNAPSHOT</version>
		</dependency>

		<dependency>
			<groupId>org.machanism.machai</groupId>
			<artifactId>genai-client</artifactId>
			<version>0.0.11-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>commons-cli</groupId>
			<artifactId>commons-cli</artifactId>
			<version>1.9.0</version>
		</dependency>

		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>1.5.6</version>
		</dependency>

		<!-- Maven libraries -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-model</artifactId>
			<version>${maven.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>${maven.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-core</artifactId>
			<version>${maven.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-connector-basic</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-file</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-http</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.resolver</groupId>
			<artifactId>maven-resolver-transport-wagon</artifactId>
			<version>1.3.3</version>
			<scope>provided</scope>
		</dependency>
	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<links>
						<link>
							https://docs.oracle.com/en/java/javase/11/docs/api/</link>
						<link>
							https://macha.machanism.org/core/core-commons/configurator/apidocs/</link>
						<link>
							https://machai.machanism.org/genai-client/apidocs/</link>
						<link>
							https://machai.machanism.org/project-layout/apidocs/</link>
					</links>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

	<scm>
		<connection>scm:git:https://github.com/machanism-org/machai.git</connection>
		<developerConnection>scm:git:https://github.com/machanism-org/machai.git</developerConnection>
		<url>https://github.com/machanism-org/machai.git</url>
	</scm>

</project>